Fix text alignment in header and footer with margin top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ ul {
     list-style: none;
     text-align: center;
     padding: 5px;
-    margin: 0;
+    margin: 0px;
 }
 
 /* header */
@@ -64,6 +64,7 @@ header a {
     float: left;
     text-decoration: none;
     color: #cd9479;
+    margin-top: 5px;
 }
 
 header a:hover {
@@ -191,8 +192,8 @@ section i {
 
 #machine-catalogue-block h4 {
     text-align: justify;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 #machine-catalogue-block table {
@@ -286,8 +287,7 @@ footer {
 footer li {
     display: inline-block;
     text-align: center;
-    margin: 0px;
-    padding: 0;
+    margin-top: 25px;
     color: #cd9479;
 }
 
@@ -317,19 +317,19 @@ footer i:hover {
 @media screen and (max-width: 1200px) {
 
     body {
-        margin: 0 auto;
+        margin: 0px auto;
     }
 
     #game-developer-timeline {
         width: 100%;
-        padding: 0;
+        padding: 0px;
     }
 
     #game-developer-history {
         clear: both;
         width: 100%;
         float: left;
-        padding: 0;
+        padding: 0px;
     }
 }
 
